<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <personal.ianroberts.dailyreminder.preferences.DatePreference
            app:key="reminder_start"
            app:title="@string/reminder_start"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="60"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:key="frequency"
            app:title="@string/frequency"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/priority_header">

        <SwitchPreferenceCompat
            app:key="silent"
            app:summaryOff="@string/silent_summary_off"
            app:summaryOn="@string/silent_summary_on"
            app:title="@string/notification_priority_type" />

    </PreferenceCategory>

</PreferenceScreen>